--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@next/font": "^14.2.15",
     "@vercel/postgres": "^0.10.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
