--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@neondatabase/serverless": "^1.0.1",
     "@next/font": "^14.2.15",
     "@vercel/postgres": "^0.10.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
